add_library(storage SHARED
        cursor.cpp
        edge_index.cpp
        edge_manager.cpp
        edge_store.cpp
        graph_storage.cpp
        GraphDb.cpp
        free_list.cpp
        metrics_store.cpp
        node_index.cpp
        node_manager.cpp
        node_store.cpp
        page_cache.cpp
        string_interner.cpp
)
target_include_directories(storage
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)
